--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cassandra-driver": "^4.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "joi": "^17.12.2",
     "nodemon": "^3.1.0"
   }
 }
