--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cassandra-driver": "^4.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
