--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0"
   }
 }
