Add nodemailer package and implement email functionality

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 CONTACTPOINTS = 
 KEYSPACE = 
 LOCALDATACENTER = 
+PORT =
+JWT_SECRET_KEY =
+EMAIL_AUTH_USER = 
+EMAIL_AUTH_PASSWORD =
+EMAIL_SERVICE =
