--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.1",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
