--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
